
package main;
public class Piece {
  private final boolean color;
  private final ChessPieceType type;

  public Piece(boolean color, ChessPieceType type) {
    this.color = color;
    this.type = type;
  }

}